--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy
-pandas
-ipython
-streamlit
-streamlit-aagrid
+ipython==8.10.0
+numpy==1.23.5
+pandas==1.5.3
+streamlit==1.23.1
+streamlit-aggrid
